[package]
name = "snipping_tool"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
win_ocr = "=0.1.3"
windows = { version = "0.56.0", features = [
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_Graphics_Dxgi",
    "Win32_Graphics_Imaging",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_System_LibraryLoader",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_Com",
    "Win32_Graphics_Direct2D_Common",
    "Win32_Graphics_Direct2D",
    "Win32_Graphics_Direct3D",
    "Win32_Graphics_Direct3D11",
    "Win32_Graphics_Dxgi_Common",
    "Win32_Graphics_Gdi",
    "Foundation_Numerics",
    "Win32_System_SystemServices",
    "Win32_Graphics_Direct3D12",
    "Win32_Graphics_Direct3D_Fxc",
    "Win32_Graphics_Dwm",
    "Win32_UI_Controls",
    "Win32_Graphics_DirectComposition"
] }

image = "0.23.14"
once_cell = "1.19.0"
anyhow = "1.0.81"




